feat(android): ship local models and sandbox runtime